small visual bug on mobile devices fixed

--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@ img.image-link:hover {
 }
 
 .header .text.bottom {
+	padding-bottom: 2rem;
 }
 
 
